<resources>
    <string name="app_name">订餐小秘书</string>
    <string name="google_api_key">0ehIMRdIb39tXAfI6VkLwj4UR98St6uTDIZk_3Q</string>
    <string name="mapbar_api_key">HnEaDpJkCfDpMbAbIhLePoIoDlNeEgAmHjCeNhNiEcHdNkLmApPlKaFhCeDkEcFa</string>
    <string name="text_phone_95171">95171</string>
    <string name="text_phone_57575777">57575777</string>
    <string name="text_title_show_error">提示</string>
    <string name="text_title_super57">超级小秘书</string>
    <string name="text_title_nearby">附近餐厅</string>
    <string name="text_title_search">搜索</string>
    <string name="text_title_nearby_food">附近的菜</string>
    <string name="text_title_list">榜单</string>
    <string name="text_hotsale">求婚成功率最高的餐厅</string>
    <string name="text_title_discount">今日七折</string>
    <string name="text_title_login">登录</string>
    <string name="text_title_my_order">我的订单</string>
    <string name="text_title_order_detail">订单详情</string>
    <string name="text_title_history">最近浏览</string>
    <string name="text_title_city_select">选择城市</string>
    <string name="text_title_restaurant_detail">餐厅详情</string>
    <string name="text_title_all_comment">全部评论</string>
    <string name="text_title_restaurant_info">餐厅信息</string>
    <string name="text_title_region_list">地域列表</string>
    <string name="text_title_search_result">查询结果</string>
    <string name="text_title_restaurant_image">餐厅图片</string>
    <string name="text_title_restaurant_menu">餐厅菜单</string>
    <string name="text_title_super57_history">历史记录</string>
    <string name="text_title_regist">注册</string>
    <string name="text_title_access_set">账户设置</string>
    <string name="text_title_book">一键预订</string>
    <string name="text_title_map">地图</string>
    <string name="text_title_all_discount">全部优惠</string>
    <string name="text_title_my_location_settings">设置定位方式</string>
    <string name="text_title_upload_pic">上传照片</string>
    <string name="text_title_my_comment">我要评论</string>
    <string name="text_title_error_report">其他错误修改</string>
    <string name="text_title_add_res">添加餐厅基本信息</string>
    <string name="text_title_update_resinfo">修改餐厅基本信息</string>
    <string name="text_title_contact">通讯录</string>
    <string name="text_title_sms_invite">发送短信请柬</string>
    <string name="text_title_change_user_pwd">修改密码</string>
    <string name="text_title_report_loc">位置报错</string>
    <string name="text_title_user_center">用户中心</string>
    <string name="text_title_enjoy_app">您可能喜欢的应用</string>
    <string name="text_title_user_crash">现金券</string>
    <string name="text_title_user_crash_buy">购买记录</string>
    <string name="text_title_user_account_in_out">账户余额</string>
    <string name="text_title_user_crashdiscount">优惠精选</string>
    <string name="text_title_user_station_message">站内信</string>
    <string name="text_title_user_wedding_order">婚团宴订单</string>
    <string name="text_title_select_sms_resad">餐厅地址：</string>
    <string name="text_title_select_sms_resinfoad">地标信息：</string>
    <string name="text_title_select_sms_moban">模板:</string>
    <string name="text_title_select_sms_otherinfo">点击可选择附近其他地标信息</string>
    <string name="text_title_nearby_title">附近地标</string>
    <string name="text_title_discount_package">套餐面额</string>
    <string name="text_title_discount_pwd">使用密码</string>
    <string name="text_title_cash_pwd">现金券密码</string>
    <string name="text_title_cash_use_info">现金券使用说明</string>
    <string name="text_title_discount_use_info">优惠套餐使用说明</string>
    <string name="text_title_cash_gift_info">没有相关礼品卡信息</string>
    <string name="text_title_discount_title">优惠套餐</string>
    <string name="text_title_share_weibo_title">分享</string>
    <string name="text_title_share_weibo_rest">分享餐厅到微博</string>
    <string name="text_title_share_weibo_software">分享软件到微博</string>
    <string name="text_button_goto_index">首页</string>
    <string name="text_button_login">登录</string>
    <string name="text_button_regist">注册</string>
    <string name="text_button_find_in_result">搜索</string>
    <string name="text_button_faction">功能菜单</string>
    <string name="text_button_index_title">订餐小秘书-上海站</string>
    <string name="text_button_editing">编辑</string>
    <string name="text_button_booking_res">订餐厅</string>
    <string name="text_button_finish">完成</string>
    <string name="text_button_back">返回</string>
    <string name="text_button_clear">清空记录</string>
    <string name="text_button_logout">退出登录</string>
    <string name="text_button_book">立即预订</string>
    <string name="text_button_write_more">填写更多信息</string>
    <string name="text_button_post_order">提交订单</string>
    <string name="text_button_bind">立即绑定</string>
    <string name="text_button_release_binded">解绑</string>
    <string name="text_button_change_bind">修改</string>
    <string name="text_button_upload">确认提交</string>
    <string name="text_button_submit">提交</string>
    <string name="text_button_cancel">取消</string>
    <string name="text_button_comment">我要评论</string>
    <string name="text_button_share_to_sina">分享优惠到新浪微博</string>
    <string name="text_button_login_for_show_all">登录,查看全部订单</string>
    <string name="text_button_goto_comment">去点评</string>
    <string name="text_button_report_price_error">报错</string>
    <string name="text_button_delete">删除</string>
    <string name="text_button_delete_order">撤销订单</string>
    <string name="text_button_modify_order">修改订单</string>
    <string name="text_button_my_order_detail">再次预订</string>
    <string name="text_button_fast">最快速</string>
    <string name="text_button_shortest">最短距离</string>
    <string name="text_button_avoid_highway">避开高速</string>
    <string name="text_button_nonstop">直达优先</string>
    <string name="text_button_subway">地铁优先</string>
    <string name="text_button_upload_from_camera">拍照上传</string>
    <string name="text_button_upload_from_local">手机相册上传</string>
    <string name="text_button_book_by_net">点击预订%1$s</string>
    <string name="text_button_book_by_phone">电话预订%1$s</string>
    <string name="text_button_view_res_info">查看该餐厅详情</string>
    <string name="text_button_search_res">搜餐厅</string>
    <string name="text_button_search_food">搜菜</string>
    <string name="text_button_local_contact">手机通讯录</string>
    <string name="text_button_net_contact">网站通讯录</string>
    <string name="text_button_add_contact">添加</string>
    <string name="text_button_save">保存</string>
    <string name="text_button_add_res">添加餐厅(可获30-50秘币)</string>
    <string name="text_button_send_sms">短信请柬</string>
    <string name="text_button_change_pwd">修改密码</string>
    <string name="text_button_compile">修改</string>
    <string name="text_button_orderfinish">已下单</string>
    <string name="text_button_confirmorder">确定保存</string>
    <string name="text_button_dish_list_dish_order">点菜</string>
    <string name="text_button_dish_list_sub_comment">发表评论</string>
    <string name="text_button_dish_myorder">我的菜单</string>
    <string name="text_button_dish_list_dish_already_order">已点</string>
    <string name="text_button_dish_comment_publish">发表</string>
    <string name="text_button_dish_comment_submit">提交评论</string>
    <string name="text_button_dish_goondish">继续点菜</string>
    <string name="text_button_regist_phone">手机注册</string>
    <string name="text_button_regist_emali">邮箱注册</string>
    <string name="text_button_clear_error_info">清空</string>
    <string name="text_button_favourable_cash">现金券</string>
    <string name="text_button_favourable_greatnum">高额返现</string>
    <string name="text_button_confirm">确定</string>
    <string name="text_button_reciverhome">收件箱</string>
    <string name="text_button_sendhome">发件箱</string>
    <string name="text_button_select_smsbtn">下一步</string>
    <string name="text_button_order_by_voice">语音订餐</string>
    <string name="text_layout_takeout_recommend">说说用餐感受吧</string>
    <string name="text_layout_nearby_recommend">周边特色餐厅推荐</string>
    <string name="text_layout_search_recommend">语音搜索 预订餐厅</string>
    <string name="text_layout_search_city">搜索城市</string>
    <string name="text_layout_search_food_recommend">搜索菜名</string>
    <string name="text_layout_gps_city">GPS定位显示您在：</string>
    <string name="text_layout_more_city">热门城市：</string>
    <string name="text_layout_popularity">人气</string>
    <string name="text_layout_supply">供应</string>
    <string name="text_layout_otherwise1">另有</string>
    <string name="text_layout_otherwise2">个特色菜品</string>
    <string name="text_layout_book_num1">近期订单</string>
    <string name="text_layout_book_num2">笔</string>
    <string name="text_layout_avg_Price1">实际人均消费</string>
    <string name="text_layout_avg_Price2">元</string>
    <string name="text_layout_friend_Impress">网友印象</string>
    <string name="text_layout_special_food">特色菜推荐</string>
    <string name="text_layout_promotion_message">优惠信息</string>
    <string name="text_layout_comment">评论</string>
    <string name="text_layout_res_info">餐厅信息</string>
    <string name="text_layout_food_more">查看全部菜单({0}例)</string>
    <string name="text_layout_comment_more">查看全部({0}条)</string>
    <string name="text_layout_res_info_more">查看餐厅特色、交通等其他信息</string>
    <string name="text_layout_input_user_name">输入邮箱/手机号</string>
    <string name="text_layout_input_password">输入密码</string>
    <string name="text_layout_not_regist">还没有账号或者忘记密码？</string>
    <string name="text_layout_email">新邮箱/新手机号</string>
    <string name="text_layout_nickname">昵称</string>
    <string name="text_layout_password">密码</string>
    <string name="text_layout_res_map">地图导航</string>
    <string name="text_layout_address">地　　址:</string>
    <string name="text_layout_price">人均:</string>
    <string name="text_layout_discount1">折扣:</string>
    <string name="text_layout_taste">口味</string>
    <string name="text_layout_all_score">总体评价</string>
    <string name="text_layout_env">环境</string>
    <string name="text_layout_service">服务</string>
    <string name="text_layout_book_num3">服务</string>
    <string name="text_layout_monday">一</string>
    <string name="text_layout_tuesday">二</string>
    <string name="text_layout_wednesday">三</string>
    <string name="text_layout_thursday">四</string>
    <string name="text_layout_friday">五</string>
    <string name="text_layout_saturday">六</string>
    <string name="text_layout_sunday">日</string>
    <string name="text_layout_noon">午市</string>
    <string name="text_layout_evening">晚市</string>
    <string name="text_layout_base_info">基本信息</string>
    <string name="text_layout_food_style">菜　　系:</string>
    <string name="text_layout_traffic">交通路线:</string>
    <string name="text_layout_consume_way">消费方式:</string>
    <string name="text_layout_park_map">停车地图</string>
    <string name="text_layout_call_time">拨打时间:</string>
    <string name="text_layout_receive_num1">共接受</string>
    <string name="text_layout_receive_num2">张图片</string>
    <string name="text_layout_customer_service">客服</string>
    <string name="text_layout_hot_area">热门商圈</string>
    <string name="text_layout_aim">查询目的</string>
    <string name="text_layout_book_phone">预订手机号</string>
    <string name="text_layout_people_num">用餐人数</string>
    <string name="text_layout_order_name">订餐人姓名</string>
    <string name="text_layout_other_info">其他信息</string>
    <string name="text_layout_other_info_request">填写更多信息有助于我们为您提供更好的订餐服务</string>
    <string name="text_layout_room_request_hall">只订大厅</string>
    <string name="text_layout_room_request_room">只订包房</string>
    <string name="text_layout_room_request_hall_then_room">优先订大厅,包房也可以</string>
    <string name="text_layout_room_request_room_then_hall">优先订包房,大厅也可以</string>
    <string name="text_layout_suggest">推荐</string>
    <string name="text_layout_input_error">请输入出错信息，支持语音输入哦！</string>
    <string name="text_layout_input_reporter">您的EMAIL(选填)</string>
    <string name="text_layout_input_name">用户名</string>
    <string name="text_info_loading">数据加载中,请稍等...</string>
    <string name="error_report_top_message">感谢你报告商户的错误信息，我们将把回复邮件发送至您的邮箱中。</string>
    <string name="error_report_bottom_message">经编辑核实确认后，根据信息丰富程度，将获赠30-50个秘币奖励。</string>
</resources>