<?xml version="1.0" encoding="utf-8"?>
<!-- 按钮面板 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dip" >

    <Button
        android:id="@+id/button_panel_btnBookByNet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dip"
        android:background="@drawable/button_panel_button"
        android:textSize="18dip"
        android:textColor="@drawable/button_panel_button_text_color" />

    <Button
        android:id="@+id/button_panel_btnBookByPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dip"
        android:background="@drawable/button_panel_button"
        android:textSize="18dip"
        android:textColor="@drawable/button_panel_button_text_color" />

    <Button
        android:id="@+id/button_panel_btnUploadFromCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dip"
        android:background="@drawable/button_panel_button"
        android:text="@string/text_button_upload_from_camera" 
        android:textSize="18dip"
        android:textColor="@drawable/button_panel_button_text_color" />

    <Button
        android:id="@+id/button_panel_btnUploadFromLocal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dip"
        android:background="@drawable/button_panel_button"
        android:text="@string/text_button_upload_from_local"
        android:textSize="18dip"
        android:textColor="@drawable/button_panel_button_text_color" />

    <Button
        android:id="@+id/button_panel_btnCancle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dip"
        android:background="@drawable/button_panel_button_cancel"
        android:text="@string/text_button_cancel"
        android:textSize="18dip"
        android:textColor="@color/text_color_white" />

</LinearLayout>